# name_the_color

./: CMakeLists.txt  README.md  color_name.cpp  color_name.h  main.cpp
